--- a/css/snake.css
+++ b/css/snake.css
@@ -11,6 +11,7 @@
   float: left;
   background-image: url(../img/snake/placeholder.png);
   background-repeat: no-repeat;
+  position: relative;
 }
 
 @media screen and (max-width: 400px),
@@ -36,8 +37,9 @@
 #controls {
   width: 100%;
   height: 100%;
-  margin-left: -12px;
-  padding: 0 12px;
+  margin: -12px 0 0 -12px;
+  padding: 12px;
+  padding-bottom: 0;
   position: absolute;
   z-index: 10;
 }
